--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -28,6 +28,8 @@ v0.45.5-SNAPSHOT
 + Issue #1230: Tripod mech breaking campaign save
 + Issue #1075: Fix 'Mech location repair and salvage times to match StratOps
 + Issue #1224: Scenario templates no longer fail to generate forces when the 'use vehicles' AtB setting is turned off
++ Issue #1238: Fix bug where self crewed units could not be activated after being mothballed
++ PR #1239: Add GM Mothball/Activate to unit menu in hangar
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
