--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,19 +1,7 @@
 VERSION HISTORY:
 ----------------
-v0.45.5-SNAPSHOT
-+ PR #1163: Fix vast overvaluing of opfor BV in the briefing tab
-+ Issue #1161: don't cast non-Infantry to Infantry during peacetime cost calculations
-+ Issue #70: BA no longer has a 100% salvage chance
-+ Issue #1165: Player no longer gets dinged contract score for not having forces deployed immediately upon AtB contract start
-+ Issue #1170: Fixed issue introduced in 45.4 where player couldn't hire personnel from personnel market with mechs
-+ Issue #1164, #1174: Fix various issues involving money, in add/edit transaction, add/edit loot.
-+ Issue #1182: Fixes a NPE because some money amounts are not always initialized in all contracts.
+v0.47.0-SNAPSHOT
 + Issue #1171: Adds autosave feature (daily or weekly, and/or before missions).
-+ Issue #1128: Player can now view stats for enemy personnel when resolving a scenario.
-+ Issue #1197: Fix bug where personnel could not be assigned to Battle Armor after repair.
-+ Issue #1185: Player can acquire ammo bins via parts acquisition dialog.
-+ Issue #1205: Improve purchase parts dialog performance when sorting.
-+ PR #1217: Fix error preventing scenario resolution involving KIA personnel
 + PR #1215: Minor updates to AtB:
 	- opfor infantry transports now come loaded with infantry (if you have infantry turned on)
 	- opfor infantry may now be field gunners
@@ -21,16 +9,35 @@ v0.45.5-SNAPSHOT
 	- allied dropships may now be non-Leopards
 	- VTOLs are always on as the bot can handle them fairly well
 + PR #1210: Adds all remaining unimplemented Large Craft parts - CIC, Grav Decks, K-F Drive, K-F Boom and the like
-+ PR #1216: Track part ID moves during campaign loads that may affect refits (may fix some outstanding refit bugs)
-+ Issue #1110: Badger / Bandit vehicles can't be customized prior to 3047
 + PR #1227: Dropships can now load alternate munitions into artillery base if the game is configured for it
 + PR #1226: [Feature] Campaign Subset Export: export a subset of your current campaign into another, either new or existing, campaign file. Overwrites units and personnel with the same guid. Option to remove exported personnel from source campaign. Obviously make backups before using on an existing campaign.
-+ Issue #1230: Tripod mech breaking campaign save
+
+0.46.0 (2019-08-12 1900 UTC)
++ Issue 1249: Tech Names Missing in Event Log
+
+0.46.0-rc.2 (2019-08-12 0100 UTC)
 + Issue #1075: Fix 'Mech location repair and salvage times to match StratOps
 + Issue #1224: Scenario templates no longer fail to generate forces when the 'use vehicles' AtB setting is turned off
 + Issue #1238: Fix bug where self crewed units could not be activated after being mothballed
 + PR #1239: Add GM Mothball/Activate to unit menu in hangar
 + Issue #1240: Cannot Salvage at 100%
+
+v0.46.0-rc.1 (2019-07-23 0300 UTC)
++ PR #1163: Fix vast overvaluing of opfor BV in the briefing tab
++ Issue #1161: don't cast non-Infantry to Infantry during peacetime cost calculations
++ Issue #70: BA no longer has a 100% salvage chance
++ Issue #1165: Player no longer gets dinged contract score for not having forces deployed immediately upon AtB contract start
++ Issue #1170: Fixed issue introduced in 45.4 where player couldn't hire personnel from personnel market with mechs
++ Issue #1164, #1174: Fix various issues involving money, in add/edit transaction, add/edit loot.
++ Issue #1182: Fixes a NPE because some money amounts are not always initialized in all contracts.
++ Issue #1128: Player can now view stats for enemy personnel when resolving a scenario.
++ Issue #1197: Fix bug where personnel could not be assigned to Battle Armor after repair.
++ Issue #1185: Player can acquire ammo bins via parts acquisition dialog.
++ Issue #1205: Improve purchase parts dialog performance when sorting.
++ PR #1217: Fix error preventing scenario resolution involving KIA personnel
++ PR #1216: Track part ID moves during campaign loads that may affect refits (may fix some outstanding refit bugs)
++ Issue #1110: Badger / Bandit vehicles can't be customized prior to 3047
++ Issue #1230: Tripod mech breaking campaign save
 
 v0.45.4 (2019-03-24 1700 UTC)
 + PR #1067: Switch to Joda Money library internally for financial math
