--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,6 +1,6 @@
 VERSION HISTORY:
 ----------------
-v0.47.0-SNAPSHOT
+v0.47.0 (2019-08-21 0300 UTC)
 + Issue #1171: Adds autosave feature (daily or weekly, and/or before missions).
 + PR #1215: Minor updates to AtB:
 	- opfor infantry transports now come loaded with infantry (if you have infantry turned on)
