--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -11,6 +11,7 @@ v0.47.1-SNAPSHOT
 + PR #1288: Allow the large craft ammo swap dialog to switch AR10, missile and artillery munitions properly
 + PR #1282: Fix erroneously high unit values
 + PR #1294: Improve ammo swaps and refits of Large Craft ammo bins
++ PR #1298: Restructuring of person view panel, double scroll issue, and other scrolling issues
 
 v0.47.0 (2019-08-21 0300 UTC)
 + Issue #1171: Adds autosave feature (daily or weekly, and/or before missions).
